infrastructure/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nubbank-baas
  labels:
    app.kubernetes.io/name: nubbank-baas
    app.kubernetes.io/part-of: nubbank
